<?xml version="1.0"?>
<package format="2">
  <name>rl_planner</name>
  <version>0.0.0</version>
  <description>The rl_planner package</description>

  <maintainer email="nkhedekar@nevada.unr.edu">Nikhil Khedekar</maintainer>
  <maintainer email="pdepetris@nevada.unr.edu">Paolo De Petris</maintainer>
  <license>MIT</license>

  <author email="nkhedekar@nevada.unr.edu">Nikhil Khedekar</author>
  <author email="pdepetris@nevada.unr.edu">Paolo De Petris</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>gazebo_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python-numpy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
